@@ -66,8 +66,9 @@ and select a role with both the 'assign roles' and the 'administer users'
 permissions.
 
 Beware: Granting the 'administer users' permission to users will allow them to
-modify admin passwords or email addresses or even delete the site administrator
-account. The User Protect module can prevent this.
+modify admin passwords or email addresses. The User Protect module can help to
+prevent this. RoleAssign will protect user 1's name, email, and password fields,
+but it won't protect any other accounts.
 
 
 USAGE
